Full CRUD functionality on single table

--- a/newTest/appsettings.json
+++ b/newTest/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=DESKTOP-2CSC0L4\\SQLEXPRESS;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+        "DefaultConnection": "Data Source=DESKTOP-2CSC0L4\\SQLEXPRESS;Initial Catalog=companydirectory;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
     },
   "Logging": {
     "LogLevel": {
